--- a/KGERP/Views/Quotation/GetQuotationList.cshtml
+++ b/KGERP/Views/Quotation/GetQuotationList.cshtml
@@ -133,9 +133,9 @@
                                                     {
                                                         <span class="btn btn-xs btn-primary text-center" style="display: block; padding-left: 7px; padding-right: 7px;">@EnumQuotationStatus.Submitted</span>
                                                     }
-                                                    else if (item.StatusId == (int)EnumQuotationStatus.Running)
+                                                    else if (item.StatusId == (int)EnumQuotationStatus.Opened)
                                                     {
-                                                        <span class="btn btn-xs btn-success text-center" style="display: block; padding-left: 7px; padding-right: 7px;">@EnumQuotationStatus.Running</span>
+                                                        <span class="btn btn-xs btn-success text-center" style="display: block; padding-left: 7px; padding-right: 7px;">@EnumQuotationStatus.Opened</span>
                                                     }
                                                     else if (item.StatusId == (int)EnumQuotationStatus.Closed)
                                                     {
@@ -153,7 +153,7 @@
                                                         <span> | </span>
                                                         <a id="@item.QuotationMasterId" class="link-primary text-danger linkPointer disabled" title="Disabled"><i class="fa fa-external-link-square" aria-hidden="true"></i> Delete</a>
                                                     }
-                                                    else if (item.StatusId == (int)EnumQuotationStatus.Running)
+                                                    else if (item.StatusId == (int)EnumQuotationStatus.Opened)
                                                     {
                                                         <a href="~/Quotation/QuotationMasterSlave?companyId=@item.CompanyFK&quotationMasterId=@item.QuotationMasterId" class="link-primary text-warning" title="Action for Details"><i class="fa fa-external-link-square" aria-hidden="true"></i> Action</a>
                                                         <span> | </span>
@@ -210,9 +210,9 @@
                                                     {
                                                         <span class="btn btn-xs btn-primary text-center" style="display: block; padding-left: 7px; padding-right: 7px;">@EnumQuotationStatus.Submitted</span>
                                                     }
-                                                    else if (item.StatusId == (int)EnumQuotationStatus.Running)
+                                                    else if (item.StatusId == (int)EnumQuotationStatus.Opened)
                                                     {
-                                                        <span class="btn btn-xs btn-success text-center" style="display: block; padding-left: 7px; padding-right: 7px;">@EnumQuotationStatus.Running</span>
+                                                        <span class="btn btn-xs btn-success text-center" style="display: block; padding-left: 7px; padding-right: 7px;">@EnumQuotationStatus.Opened</span>
                                                     }
                                                     else if (item.StatusId == (int)EnumQuotationStatus.Closed)
                                                     {
@@ -230,7 +230,7 @@
                                                         <span> | </span>
                                                         <a id="@item.QuotationMasterId" class="link-primary text-danger linkPointer disabled" title="Disabled"><i class="fa fa-external-link-square" aria-hidden="true"></i> Delete</a>
                                                     }
-                                                    else if (item.StatusId == (int)EnumQuotationStatus.Running)
+                                                    else if (item.StatusId == (int)EnumQuotationStatus.Opened)
                                                     {
                                                         <a href="~/Quotation/QuotationMasterSlave?companyId=@item.CompanyFK&quotationMasterId=@item.QuotationMasterId" class="link-primary text-warning" title="Action for Details"><i class="fa fa-external-link-square" aria-hidden="true"></i> Action</a>
                                                         <span> | </span>
