Quotation Bug fixed

--- a/KGERP/Views/Quotation/ComparativeStatement.cshtml
+++ b/KGERP/Views/Quotation/ComparativeStatement.cshtml
@@ -95,11 +95,11 @@
                                                 <div style="padding: 15px 7px;">
                                                     <b>Quotation No: </b>@item.QuotationNo
                                                     <br />
-                                                    <b>Quotation Name: </b>@item.QuotationName
+                                                    <b>Quotation Name: </b>@item.QuotationForName
                                                     <br />
                                                     <b>Quotation Date: </b>@item.QuotationDate.ToString("dd/MM/yyyy")
                                                     <br />
-                                                    <b>Supplier Name: </b>@item.SupplierName
+                                                    @*<b>Supplier Name: </b>@item.SupplierName*@
                                                 </div>
 
                                                 <table class="table table-bordered" style="margin: 0 !important;">
