--- a/KGERP/Views/Quotation/GetQuotationList.cshtml
+++ b/KGERP/Views/Quotation/GetQuotationList.cshtml
@@ -105,7 +105,7 @@
                                 <tbody>
                                     @if (searchData != null)
                                     {
-                                        foreach (var item in searchData.DataList)
+                                        foreach (var item in searchData.DataList.OrderByDescending(x => x.QuotationMasterId))
                                         {
                                             <tr>
                                                 <td>@(++sl)</td>
@@ -182,7 +182,7 @@
                                     }
                                     else
                                     {
-                                        foreach (var item in Model.DataList)
+                                        foreach (var item in Model.DataList.OrderByDescending(x => x.QuotationMasterId))
                                         {
                                             <tr>
                                                 <td>@(++sl)</td>
